<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:windowSoftInputMode="adjustResize"
        >

        <ImageView
            android:id="@+id/imagename"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_loading2"
            android:contentDescription="@string/聊天頭貼" />

        <TextView
            android:id="@+id/textname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/ttttt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/冒號" />

        <TextView
            android:id="@+id/texttell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/說話" />


    </LinearLayout>


</LinearLayout>